     * custom hadoop_streaming_jar gets properly uploaded
     * 4.x AMIs are supported (#1105)
       * added --release-label switch (--ami-version 4.0.0 also works)
   * Hadoop
     * hdfs_scratch_dir option is now hadoop_tmp_dir (#318)
     * use fs -ls -R and fs -rm -R in YARN (#1152)
     * fs.rm() now uses -skipTrash
 * removed mrjob.compat.get_jobconf_value() (use jobconf_from_env())
 * Python-version-specific mrjob commands (#1104)
 * mrjob.util:
   * random_identifier() moved here from mrjob.aws
   * renamed buffer_iterator_to_line_iterator() to to_lines()
     * to_lines() no longer appends a newline to data (#819)
   * removed extract_dir_for_tar()
   * gunzip_stream() now yields chunks, not lines
   * removed hash_object()

v0.4.6, 2015-11-?? -- config files
 * PyYAML>=3.10 is required
 * !clear tag in conf files (#1162)
 * combine_lists() and combine_path_lists() can handle scalars (#1172)
 * mrjob.conf.combine_cmd_lists() is deprecated (#1168)

v0.4.5, 2015-07-28 -- DescribeJobFlows begone
 * boto>=2.6.0 is required (used to be 2.2.0)
 * runners:
   * EMR:
     * moved off deprecated DescribeJobFlows API (#876)
       * time-to-end-of-hour now uses creation time, not "start" time
     * aws_security_token for temporary credentials (#1003)
     * Use AWS managed policies when creating IAM objects (#1026)
     * Fall back to default role/instance profile when no IAM access (#1008)
     * added emr_tags option (#1058)
     * added get_ami_version() method
     * hadoop_version option no longer has any effect (#1017)
   * Hadoop:
     * --hadoop-home switch now works (#1037)
 * EMR tools:
   * added switches for AWS connection options etc. (#1087)
   * mrboss is available from command line tool: mrjob boss [args]
   * terminate_idle_job_flows:
     * less prone to race condition (#910)
     * prints results to stdout in dry_run mode (#1102)
     * job flows stuck in STARTING state no longer considered idle