@@ -37,6 +37,7 @@ v0.5.0, 2015-??-?? -- ???
      * use fs -ls -R and fs -rm -R in YARN (#1152)
      * fs.rm() now uses -skipTrash
  * removed mrjob.compat.get_jobconf_value() (use jobconf_from_env())
+ * removed mrjob.conf.combine_cmd_lists()
  * Python-version-specific mrjob commands (#1104)
  * mrjob.util:
    * random_identifier() moved here from mrjob.aws
